[package]
name = "quarts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
indicatif = "0.17.7"
itertools = "0.11.0"
phylo = { version = "0.1.0", path = "../../phylo-rs" }
rayon = "1.8.0"
